--- a/package.json
+++ b/package.json
@@ -1,20 +1,33 @@
 {
-  "name": "sophie",
-  "version": "1.0.0",
+  "name": "discord.js-bot",
+  "version": "2.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn ./src/index.ts",
+    "start": "ts-node ./src/index.ts",
+    "start:prod": "npm run build && node ./dist/index.js",
+    "build": "npx tsc"
   },
+  "keywords": [],
   "author": "Nat'",
   "license": "ISC",
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.19",
+    "@types/node": "^16.11.9",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
+    "ts-node": "^10.4.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.5.2"
+  },
   "dependencies": {
-    "canvas": "^2.8.0",
-    "discord.js": "^13.1.0",
-    "ejs": "^3.1.6",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "mysql": "^2.18.1",
-    "node-fetch": "^2.6.1"
+    "discord.js": "^13.3.1",
+    "mysql": "^2.18.1"
   }
 }
